--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,10 +19,23 @@
    
     
 }
+.open {
+    margin: 15px;
+    padding:15px;
+    flex-direction: column;
+    align-items: center;
+    display:flex
+}
+.container {
+    text-align: center;
+    margin:20px;
+    width: 700px;
+}
 
 .title {
     margin: 20px;
-    font-size: 30px;
+    font-size: 60px;
+    font-family:Arial, Helvetica, sans-serif;
 
 }
 
